[package]
name = "blog_backend"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "chrono" ] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
